fixed scrollbar padding issue

--- a/src/app/cmps/stay-list/stay-list.component.scss
+++ b/src/app/cmps/stay-list/stay-list.component.scss
@@ -11,13 +11,13 @@
   row-gap: em(40px);
   grid-auto-rows: minmax(min-content, max-content);
   @include for-mobile-layout {
+    overflow: auto;
     margin-block-start: calc($header-height + $header-height + 3.7em);
     a {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-    overflow: scroll;
   }
 }
 
