--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -3,7 +3,6 @@
   display: inline-block;
   height: 100vh;
   width: 100%;
-  padding: em(20px) em(100px);
   margin: 0 auto;
   overflow: auto !important;
 
@@ -25,22 +24,24 @@
 
   @include for-mobile-layout {
     max-width: initial;
-    padding: 0 1px;
   }
 
   @include for-tablet-layout {
-    padding: 0 1px;
+    padding: 0 2px;
     max-width: $mobile-breakpoint;
   }
 
   @include for-normal-layout {
     max-width: $tablet-breakpoint;
+    padding: em(20px) em(100px);
   }
 
   @include for-wide-layout {
     max-width: $normal-breakpoint;
+    padding: em(20px) em(100px);
   }
   @include for-extra-wide-layout {
+    padding: em(20px) em(100px);
     // max-width: $wide-breakpoint;
   }
 }
@@ -68,8 +69,9 @@
 }
 
 .main-content {
-  width: 100%;
+  width: calc(100% + 8px);
   height: calc(100vh - $header-height);
+  padding-inline: 1em;
   &.map-active {
     display: grid;
     gap: 1em;
@@ -108,6 +110,7 @@
       }
       @include for-mobile-layout {
         grid-row: 4;
+        width: 100%;
       }
       width: max-content;
       overflow-y: auto;
